<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.lottery_number_upload.LotteryNumberUploadActivity">
    <ScrollView
        android:fillViewport="true"
        android:background="@drawable/gradient_one"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:padding="@dimen/_20sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.lottery.sambad.admin.ui.custom.DropDownView
                android:id="@+id/resultPublishTimeDropDownTextView"
                style="@style/MyBoldTextViewStyle"
                android:background="@color/red"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp" />
            <EditText
                android:id="@+id/lotterySerialNumbersEditText"
                style="@style/MyEditTextStyle"
                android:layout_marginTop="@dimen/_5sdp"
                android:paddingStart="@dimen/_5sdp"
                android:hint="@string/write_lottery_serial_number"
                android:maxLength="3"
                android:inputType="textCapCharacters"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp" />
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_80sdp">
                <EditText
                    android:id="@+id/firstLotteryNumbersEditText"
                    style="@style/MyEditTextStyle"
                    android:maxLength="5"
                    android:inputType="number"
                    android:paddingStart="@dimen/_5sdp"
                    android:hint="@string/first_prize"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
                <ImageView
                    android:id="@+id/firstLotteryNumberPasteImageView"
                    app:layout_constraintBottom_toBottomOf="@+id/firstLotteryNumbersEditText"
                    app:layout_constraintEnd_toEndOf="@+id/firstLotteryNumbersEditText"
                    android:layout_margin="@dimen/_5sdp"
                    android:src="@drawable/ic_paste"
                    android:background="@drawable/icon_background"
                    android:padding="@dimen/_5sdp"
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_40sdp" />
                <ImageView
                    android:id="@+id/firstLotteryNumberClearImageView"
                    app:layout_constraintBottom_toBottomOf="@+id/firstLotteryNumbersEditText"
                    app:layout_constraintStart_toStartOf="@+id/firstLotteryNumbersEditText"
                    android:layout_margin="@dimen/_5sdp"
                    android:src="@drawable/ic_clear"
                    android:background="@drawable/icon_background"
                    android:padding="@dimen/_5sdp"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp" />
            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_80sdp">
                <EditText
                    android:id="@+id/secondLotteryNumbersEditText"
                    style="@style/MyEditTextStyle"
                    android:inputType="phone"
                    android:paddingStart="@dimen/_5sdp"
                    android:hint="@string/second_prize"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
                <ImageView
                    android:id="@+id/secondLotteryNumberPasteImageView"
                    app:layout_constraintBottom_toBottomOf="@+id/secondLotteryNumbersEditText"
                    app:layout_constraintEnd_toEndOf="@+id/secondLotteryNumbersEditText"
                    android:layout_margin="@dimen/_5sdp"
                    android:src="@drawable/ic_paste"
                    android:background="@drawable/icon_background"
                    android:padding="@dimen/_5sdp"
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_40sdp" />
                <ImageView
                    android:id="@+id/secondLotteryNumberClearImageView"
                    app:layout_constraintBottom_toBottomOf="@+id/secondLotteryNumbersEditText"
                    app:layout_constraintStart_toStartOf="@+id/secondLotteryNumbersEditText"
                    android:layout_margin="@dimen/_5sdp"
                    android:src="@drawable/ic_clear"
                    android:background="@drawable/icon_background"
                    android:padding="@dimen/_5sdp"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp" />
            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_80sdp">
                <EditText
                    android:id="@+id/thirdLotteryNumbersEditText"
                    style="@style/MyEditTextStyle"
                    android:inputType="phone"
                    android:paddingStart="@dimen/_5sdp"
                    android:hint="@string/third_prize"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
                <ImageView
                    android:id="@+id/thirdLotteryNumberPasteImageView"
                    app:layout_constraintBottom_toBottomOf="@+id/thirdLotteryNumbersEditText"
                    app:layout_constraintEnd_toEndOf="@+id/thirdLotteryNumbersEditText"
                    android:layout_margin="@dimen/_5sdp"
                    android:src="@drawable/ic_paste"
                    android:background="@drawable/icon_background"
                    android:padding="@dimen/_5sdp"
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_40sdp" />
                <ImageView
                    android:id="@+id/thirdLotteryNumberClearImageView"
                    app:layout_constraintBottom_toBottomOf="@+id/thirdLotteryNumbersEditText"
                    app:layout_constraintStart_toStartOf="@+id/thirdLotteryNumbersEditText"
                    android:layout_margin="@dimen/_5sdp"
                    android:src="@drawable/ic_clear"
                    android:background="@drawable/icon_background"
                    android:padding="@dimen/_5sdp"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp" />
            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_80sdp">
                <EditText
                    android:id="@+id/fourthLotteryNumbersEditText"
                    style="@style/MyEditTextStyle"
                    android:inputType="phone"
                    android:paddingStart="@dimen/_5sdp"
                    android:hint="@string/fourth_prize"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
                <ImageView
                    android:id="@+id/fourthLotteryNumberPasteImageView"
                    app:layout_constraintBottom_toBottomOf="@+id/fourthLotteryNumbersEditText"
                    app:layout_constraintEnd_toEndOf="@+id/fourthLotteryNumbersEditText"
                    android:layout_margin="@dimen/_5sdp"
                    android:src="@drawable/ic_paste"
                    android:background="@drawable/icon_background"
                    android:padding="@dimen/_5sdp"
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_40sdp" />
                <ImageView
                    android:id="@+id/fourthLotteryNumberClearImageView"
                    app:layout_constraintBottom_toBottomOf="@+id/fourthLotteryNumbersEditText"
                    app:layout_constraintStart_toStartOf="@+id/fourthLotteryNumbersEditText"
                    android:layout_margin="@dimen/_5sdp"
                    android:src="@drawable/ic_clear"
                    android:background="@drawable/icon_background"
                    android:padding="@dimen/_5sdp"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp" />
            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_80sdp">
                <EditText
                    android:id="@+id/fifthLotteryNumbersEditText"
                    style="@style/MyEditTextStyle"
                    android:inputType="phone"
                    android:paddingStart="@dimen/_5sdp"
                    android:hint="@string/fifth_prize"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
                <ImageView
                    android:id="@+id/fifthLotteryNumberPasteImageView"
                    app:layout_constraintBottom_toBottomOf="@+id/fifthLotteryNumbersEditText"
                    app:layout_constraintEnd_toEndOf="@+id/fifthLotteryNumbersEditText"
                    android:layout_margin="@dimen/_5sdp"
                    android:src="@drawable/ic_paste"
                    android:background="@drawable/icon_background"
                    android:padding="@dimen/_5sdp"
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_40sdp" />
                <ImageView
                    android:id="@+id/fifthLotteryNumberClearImageView"
                    app:layout_constraintBottom_toBottomOf="@+id/fifthLotteryNumbersEditText"
                    app:layout_constraintStart_toStartOf="@+id/fifthLotteryNumbersEditText"
                    android:layout_margin="@dimen/_5sdp"
                    android:src="@drawable/ic_clear"
                    android:background="@drawable/icon_background"
                    android:padding="@dimen/_5sdp"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp" />
            </androidx.constraintlayout.widget.ConstraintLayout>
            <Button
                android:id="@+id/uploadLotteryNumberButton"
                style="@style/MyButtonStyle"
                android:text="@string/upload_lottery_number"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_40sdp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp" />
        </LinearLayout>
    </ScrollView>
    <com.github.ybq.android.spinkit.SpinKitView
        android:id="@+id/spin_kit"
        style="@style/SpinKitView.Large.Circle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_gravity="center"
        app:SpinKit_Color="@color/red" />
</androidx.constraintlayout.widget.ConstraintLayout>